--- a/about/design-toolkit.html
+++ b/about/design-toolkit.html
@@ -51,7 +51,7 @@ accessibility-info:
                                 A quick tutorial that guides you through the final steps of WI+RE's foundational training in learner-centered design.
                             </p>
                         <div class="btn-group btn-group-sm float-right" role="group" aria-label="Actions">
-                            <iframe src="https://uclabruinlearn.h5p.com/content/1291709899116961318/embed" width="686" height="1178" frameborder="0" allowfullscreen="allowfullscreen" allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *" aria-label="Foundations in Learner-Centered Design: Paper Prototyping, Creating Interactive Content, and Gathering Feedback"></iframe><script src="https://uclabruinlearn.h5p.com/js/h5p-resizer.js" charset="UTF-8"></script>Tutorial</a>
+                            <a href="https://uclabruinlearn.h5p.com/content/1291709899116961318/embed">Tutorial</a>
                         </div>
                     </div>
                 </li>
