--- a/about/design-toolkit.html
+++ b/about/design-toolkit.html
@@ -51,7 +51,7 @@ accessibility-info:
                                 A quick tutorial that guides you through the final steps of WI+RE's foundational training in learner-centered design.
                             </p>
                         <div class="btn-group btn-group-sm float-right" role="group" aria-label="Actions">
-                            <a href="https://uclabruinlearn.h5p.com/content/1291709899116961318/embed">Tutorial</a>
+                            <a href="https://uclabruinlearn.h5p.com/content/1291709899116961318/embed" class="btn btn-primary">Tutorial</a>
                         </div>
                     </div>
                 </li>
